Reworked a whole lot of stuff: - Pages are now created using templates rather than as hardcoded html. - Improved handling of stylesheets and images from different directories. - Improved general handling of relative paths in configuration files.
git-svn-id: https://sdocml.googlecode.com/svn/trunk@23 a297bd5c-318b-11de-a996-7ff70a941223

--- a/conf/default.conf
+++ b/conf/default.conf
@@ -1,3 +1,4 @@
+template        : defaulttemplate.html
 appicon         : ../html/graphics/appicon.png 
 stylesheet      : ../html/style/style.css 
 stylesheet      : ../html/style/refstyle.css
