Updated some documentation
git-svn-id: https://sdocml.googlecode.com/svn/trunk@49 a297bd5c-318b-11de-a996-7ff70a941223

--- a/conf/sdoc-html.conf
+++ b/conf/sdoc-html.conf
@@ -1,4 +1,5 @@
 template        : defaulttemplate.html
+sidebartemplate : sidebartemplate.html 
 docdir          : sdocml
 #incpath         : .
 #incpath         : ../../tools/motex/src
