--- a/conf/sdoc-html.conf
+++ b/conf/sdoc-html.conf
@@ -1,21 +1,2 @@
-template        : defaulttemplate.html
-sidebartemplate : sidebartemplate.html 
+template        : ../html/template/template.html
 docdir          : sdocml
-#incpath         : .
-#incpath         : ../../tools/motex/src
-appicon         : ../html/graphics/appicon.png 
-stylesheet      : ../html/style/style.css 
-stylesheet      : ../html/style/refstyle.css
-icon            : content-expand-button    = ../html/graphics/contentbutton.png 
-icon            : content-noexpand-button  = ../html/graphics/nocontentbutton.png 
-icon            : prev                     = ../html/graphics/prev.png 
-icon            : next                     = ../html/graphics/next.png 
-icon            : up                       = ../html/graphics/up.png 
-icon            : content                  = ../html/graphics/contents.png 
-icon            : index                    = ../html/graphics/index.png 
-icon            : passive                  = ../html/graphics/blank.png 
-icon            : error                    = ../html/graphics/blank.png 
-icon            : prev-passive             = ../html/graphics/blank.png 
-icon            : next-passive             = ../html/graphics/blank.png 
-icon            : up-passive               = ../html/graphics/blank.png 
-
